--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
                       <td class="bulletin-date">2017/11/8</td>
-                      <td style="text-align:center;vertical-align:middle;"><a href="https://docs.google.com/spreadsheets/d/10_rlgN05mk_xAbhxLf0TTFrfyMztjpktWSsn9AJNjK4/edit?usp=sharing" target="_blank">資工系期中成績總表連結</a></td>
+                      <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/EomGbY" target="_blank">資工系期中成績總表連結</a></td>
                 </tr>
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
