--- a/index.html
+++ b/index.html
@@ -213,9 +213,14 @@
               </thead>
               <tbody>
                   <tr>    
+                  <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
+                  <td class="bulletin-date">2017/11/10</td>
+                  <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/aP6Vir" target="_blank">電機系期中成績總表連結</a></td>
+            </tr>
+                  <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
                       <td class="bulletin-date">2017/11/8</td>
-                      <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/EomGbY" target="_blank">資工系期中成績總表連結</a></td>
+                      <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/cqv3Q2" target="_blank">資工系期中成績總表連結</a></td>
                 </tr>
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
