--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
               <tbody>
                   <tr>    
                   <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
-                  <td class="bulletin-date">2017/11/10</td>
-                  <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/aP6Vir" target="_blank">電機系期中成績總表連結</a></td>
+                  <td class="bulletin-date">2017/11/17</td>
+                  <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/aP6Vir" target="_blank">電機系期中成績總表連結(更新)</a></td>
             </tr>
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
-                      <td class="bulletin-date">2017/11/8</td>
-                      <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/cqv3Q2" target="_blank">資工系期中成績總表連結</a></td>
+                      <td class="bulletin-date">2017/11/17</td>
+                      <td style="text-align:center;vertical-align:middle;"><a href="https://docs.google.com/spreadsheets/d/1RrC2sitXtOf9N0vROM103i0DUN_HusdW0nWkVouk-5A/edit?usp=sharing" target="_blank">資工系期中成績總表連結(更新)</a></td>
                 </tr>
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
