--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@
               </thead>
               <tbody>
                   <tr>    
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">new</span></td>
+                      <td class="bulletin-date">2017/11/24</td>
+                      <td style="text-align:center;vertical-align:middle;"><a href="https://drive.google.com/file/d/1ygvtSfugPurgkl0TT_PNkAen-MlbiNnD/view?usp=sharing" target="_blank">11/16 跟 11/23的上課發問 11/23 小考成績(資工) </a></td>
+                </tr>
+            <tr>    
                   <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
                   <td class="bulletin-date">2017/11/17</td>
                   <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/aP6Vir" target="_blank">電機系期中成績總表連結(更新)</a></td>
