--- a/index.html
+++ b/index.html
@@ -150,12 +150,11 @@
             <li><a href="#" id="Contact"  data-html="true" data-container="body" data-toggle="popover" data-placement="bottom" data-content="<font color='#E74425'>Teacher :</font><br>
                      林清池 INS509<br>
                      E-mail : lincc@mail.ntou.edu.tw<br><br>
-                     <font color='#E74425'>TAs(A) :</font><br>
-                     蔡岳志 INS601 6646<br>
-                     胡有值端 INS601 6646<br>
-                     <font color='#E74425'>TAs(B) :</font><br>
-                     謝明原 INS603 6609<br>
-                     游智傑 INS603 6609<br>
+                     <font color='#E74425'>TAs(資工) :</font><br>
+                     劉閔正 INS601 6646<br>
+                     任威竹 INS601 6646<br>
+                     <font color='#E74425'>TA(電機) :</font><br>
+                     吳志軒 INS603 6609<br>
                      ">聯絡資訊</a></li>
             <!--<li><a href="#" id="HWFormat" data-html="true" data-container="body" data-toggle="popover" data-placement="bottom" data-content="請用<font color='red'> 雙面空白A4紙書寫</font><br>
                      標明<font color='red'> HW# 姓名 學號</font><br>
@@ -215,7 +214,7 @@
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">new</span></td>
                       <td class="bulletin-date">2017/11/24</td>
-                      <td style="text-align:center;vertical-align:middle;"><a href="https://drive.google.com/file/d/1ygvtSfugPurgkl0TT_PNkAen-MlbiNnD/view?usp=sharing" target="_blank">11/16 跟 11/23的上課發問 11/23 小考成績(資工) </a></td>
+                      <td style="text-align:center;vertical-align:middle;"><a href="https://drive.google.com/file/d/1ygvtSfugPurgkl0TT_PNkAen-MlbiNnD/view?usp=sharing" target="_blank">12/07 跟 11/30的上課發問 11/07 小考成績(資工) </a></td>
                 </tr>
             <tr>    
                   <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
@@ -524,6 +523,11 @@
         <td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=0BxJp5QcLMI49VEJaVTdDcVRXazA">Quiz5_solution</a></td>
         <td style="vertical-align:middle;">2017/11/06</td>			
     </tr>
+    <tr>
+      <td style="vertical-align:middle;">Quiz_7(電機)</td>
+      <td style="vertical-align:middle;"><a href="https://goo.gl/Kf2Seb">Quiz5_solution</a></td>
+      <td style="vertical-align:middle;">2017/11/06</td>			
+  </tr>
 			<!--	<tr>
 						<td style="vertical-align:middle;">Quiz5_FindMaxSubarray_MasterMethod</td>
 						<td style="vertical-align:middle;"><a href="https://goo.gl/7p0sMK">Quiz5_solution</a></td>
