--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@
                 </tr>								
 				<tr>                  
 				  <td style="vertical-align:middle;">Ch16 Greedy Algorithms</td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/HqmMD5" target="_blank">Algorithm-Ch16</a></td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/8FJHw7" target="_blank">Algorithm-Ch16-4</a></td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/7Hbaic" target="_blank">Algorithm-Ch16-annotated</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/8FJHw7" target="_blank">Algorithm-Ch16</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/7Hbaic" target="_blank">Algorithm-Ch16-4</a></td>
+                  <td style="vertical-align:middle;"><a href="https://goo.gl/u4cguu" target="_blank">Algorithm-Ch16-annotated</a></td>
                   <td style="vertical-align:middle;">2017/09/08</td>                
 				</tr>
 
