--- a/index.html
+++ b/index.html
@@ -520,14 +520,39 @@
       </tr>
       <tr>
         <td style="vertical-align:middle;">Quiz_7(資工)</td>
-        <td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=0BxJp5QcLMI49VEJaVTdDcVRXazA">Quiz5_solution</a></td>
+        <td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=0BxJp5QcLMI49VEJaVTdDcVRXazA">Quiz7_solution</a></td>
         <td style="vertical-align:middle;">2017/11/06</td>			
     </tr>
     <tr>
       <td style="vertical-align:middle;">Quiz_7(電機)</td>
-      <td style="vertical-align:middle;"><a href="https://goo.gl/Kf2Seb">Quiz5_solution</a></td>
+      <td style="vertical-align:middle;"><a href="https://goo.gl/Kf2Seb">Quiz7_solution</a></td>
       <td style="vertical-align:middle;">2017/11/30</td>			
   </tr>
+  <tr>
+    <td style="vertical-align:middle;">Quiz_8(電機)</td>
+    <td style="vertical-align:middle;"><a href="https://drive.google.com/file/d/1Zkl4JBpeeVwWEM-386CnrhCBBtyBJkNS/view?usp=sharing">Quiz8_solution</a></td>
+    <td style="vertical-align:middle;">2018/1/5</td>			
+</tr>
+<tr>
+  <td style="vertical-align:middle;">Quiz_9(電機)</td>
+  <td style="vertical-align:middle;"><a href="https://drive.google.com/file/d/1HwldLzY5jonC8_RAd_Veb8DrqCGleBn-/view?usp=sharing">Quiz9_solution</a></td>
+  <td style="vertical-align:middle;">2018/1/5</td>			
+</tr>
+<tr>
+  <td style="vertical-align:middle;">Quiz_9-1(電機)</td>
+  <td style="vertical-align:middle;"><a href="https://drive.google.com/file/d/1kAchQazJmpTmvTVZ85gWiAQq90ePYF_b/view?usp=sharing">Quiz9-1_solution</a></td>
+  <td style="vertical-align:middle;">2018/1/5</td>			
+</tr>
+<tr>
+  <td style="vertical-align:middle;">Quiz_10(電機)</td>
+  <td style="vertical-align:middle;"><a href="https://drive.google.com/file/d/1Esm_GH2fsz6KQzqm0eBIyPPOa3FHTFQc/view?usp=sharing">Quiz10_solution</a></td>
+  <td style="vertical-align:middle;">2018/1/5</td>			
+</tr>
+<tr>
+  <td style="vertical-align:middle;">Quiz_11(電機)</td>
+  <td style="vertical-align:middle;"><a href="https://drive.google.com/open?id=1BhjBXXwqR4GTUoJFeF-wIR_AjbfTZWoa">Quiz11_solution</a></td>
+  <td style="vertical-align:middle;">2018/1/5</td>			
+</tr>
 			<!--	<tr>
 						<td style="vertical-align:middle;">Quiz5_FindMaxSubarray_MasterMethod</td>
 						<td style="vertical-align:middle;"><a href="https://goo.gl/7p0sMK">Quiz5_solution</a></td>
