--- a/index.html
+++ b/index.html
@@ -212,15 +212,19 @@
               </thead>
               <tbody>
                   <tr>    
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span>new</td>
+                      <td class="bulletin-date">2017/11/1</td>
+                      <td style="text-align:center;vertical-align:middle;">期末考資訊:時間：1/9 (二) 晚上 6:00~9:00 地點：電機 B01 資工 B10 B12 範圍：第 8 章 ~ 第 16 章 可攜帶一張「手寫」 A4 紙張、期末考順利！</td>
+                </tr>
+                  <tr>    
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
+                      <td class="bulletin-date">2018/1/8</td>
+                      <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/CWc32e" target="_blank">電機系期末考前成績總表連結(更新)</a></td>
+                  <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">new</span></td>
                       <td class="bulletin-date">2017/11/24</td>
                       <td style="text-align:center;vertical-align:middle;"><a href="https://drive.google.com/file/d/1ygvtSfugPurgkl0TT_PNkAen-MlbiNnD/view?usp=sharing" target="_blank">12/07 跟 11/30的上課發問 11/07 小考成績(資工) </a></td>
                 </tr>
-            <tr>    
-                  <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
-                  <td class="bulletin-date">2017/11/17</td>
-                  <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/aP6Vir" target="_blank">電機系期中成績總表連結(更新)</a></td>
-            </tr>
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
                       <td class="bulletin-date">2017/11/17</td>
