--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
               </thead>
               <tbody>
                   <tr>    
-                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span>new</td>
-                      <td class="bulletin-date">2017/11/1</td>
-                      <td style="text-align:center;vertical-align:middle;">期末考資訊:時間：1/9 (二) 晚上 6:00~9:00 地點：電機 B01 資工 B10 B12 範圍：第 8 章 ~ 第 16 章 可攜帶一張「手寫」 A4 紙張、期末考順利！</td>
+                    <td style="text-align:left;vertical-align:middle"><span class="label label-danger">new</span></td>
+                      <td class="bulletin-date">2018/1/8</td>
+                      <td style="text-align:center;vertical-align:middle;">期末考資訊:時間：1/9 (二) 晚上 6:00~9:00 地點：電機 B01 資工 B10 B12 範圍：第 8 章 ~ 第 16 章 可攜帶一張「手寫」 A4 紙張</td>
                 </tr>
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
