--- a/index.html
+++ b/index.html
@@ -212,23 +212,19 @@
               </thead>
               <tbody>
                   <tr>    
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
+                      <td class="bulletin-date">2018/1/11</td>
+                      <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/CWc32e" target="_blank">電機系期末總成績表(更新)</a></td>
+                  <tr>  
+                  <tr>    
                     <td style="text-align:left;vertical-align:middle"><span class="label label-danger">new</span></td>
                       <td class="bulletin-date">2018/1/8</td>
                       <td style="text-align:center;vertical-align:middle;">期末考資訊:時間：1/9 (二) 晚上 6:00~9:00 地點：電機 B01 資工 B10 B12 範圍：第 8 章 ~ 第 16 章 可攜帶一張「手寫」 A4 紙張</td>
                 </tr>
-                  <tr>    
-                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
-                      <td class="bulletin-date">2018/1/8</td>
-                      <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/CWc32e" target="_blank">電機系期末考前成績總表連結(更新)</a></td>
-                  <tr>    
+                   
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger">new</span></td>
                       <td class="bulletin-date">2017/11/24</td>
                       <td style="text-align:center;vertical-align:middle;"><a href="https://drive.google.com/file/d/1ygvtSfugPurgkl0TT_PNkAen-MlbiNnD/view?usp=sharing" target="_blank">12/07 跟 11/30的上課發問 11/07 小考成績(資工) </a></td>
-                </tr>
-                  <tr>    
-                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger">Important</span></td>
-                      <td class="bulletin-date">2017/11/17</td>
-                      <td style="text-align:center;vertical-align:middle;"><a href="https://docs.google.com/spreadsheets/d/1RrC2sitXtOf9N0vROM103i0DUN_HusdW0nWkVouk-5A/edit?usp=sharing" target="_blank">資工系期中成績總表連結(更新)</a></td>
                 </tr>
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
