--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon"1032 href="./assets/ico/favicon.png">
 	
-    <title>1061 演算法教學網頁</title>
+    <title>1062</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
