--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
               <tbody>
                 <tr>
                   <td style="vertical-align:middle;">Syllabus</td>
-                  <td style="vertical-align:middle;"><a href="https://goo.gl/2QyrtH" target="_blank">Syllabus</a></td>
+                  <td style="vertical-align:middle;"><a href="https://ppt.cc/f9hx6x" target="_blank">Syllabus</a></td>
                   <td style="vertical-align:middle;"><a href="https://goo.gl/LxuRD2" target="_blank">Syllabus-4</a></td>
                   <td style="vertical-align:middle;"></td>
                   <td style="vertical-align:middle;">2017/09/15</td>
