--- a/index.html
+++ b/index.html
@@ -272,6 +272,12 @@
 				          <td style="text-align:center;vertical-align:middle;">WEB TEST</td>
             </tr>
 
+            <tr>    
+              <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
+              <td class="bulletin-date">2018/3/1</td>
+              <td style="text-align:center;vertical-align:middle;">明天(3/2)有第一次小考，考試範圍:上周五的上課內容。</td>
+        </tr>
+
           </tbody>
       </table>
 
