--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
 
               -->
               <tr>    
-                <td style="text-align:left;vertical-align:middle"><span class="label </span></td>
+                <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
                 <td class="bulletin-date">2018/3/15</td>
-                <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/ayyWnK" target="_blank">quiz1,2成績</a></td>
+                <td style="text-align:center;vertical-align:middle;"><a href="https://goo.gl/spv8Lm" target="_blank">quiz1,2成績</a></td>
               </tr> 
 
               <tr>    
