--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
                         <td style="vertical-align:middle;"><a href="https://goo.gl/sJwSAJ" >Ans15</a></td>
                         <td style="vertical-align:middle;">2015/09/10</td>
                     </tr>
+			
                       
 
                 </tbody>
@@ -739,6 +740,16 @@
                           <td style="vertical-align:middle;"><a href="https://goo.gl/VBieXX" target="_blank">2013期末考</a></td>
                           <td style="vertical-align:middle;">2017/9/16</td>
                       </tr>
+			<tr>
+                          <td style="vertical-align:middle;">2017演算法期中考</td>
+                          <td style="vertical-align:middle;"><a href="https://goo.gl/7CEykG" target="_blank">2017期中考</a></td>
+                          <td style="vertical-align:middle;">2018/4/15</td>
+                      	</tr>
+			  <tr>
+                          <td style="vertical-align:middle;">2017演算法期末考</td>
+                          <td style="vertical-align:middle;"><a href="https://goo.gl/t1VpGf" target="_blank">2017期末考</a></td>
+                          <td style="vertical-align:middle;">2018/4/15</td>
+                      	</tr>
                   </tbody>
                 </table>
               </div>
