--- a/index.html
+++ b/index.html
@@ -231,8 +231,13 @@
               <tbody>
 		      <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
-                      <td class="bulletin-date">2018/4/10</td>
+                      <td class="bulletin-date">2018/4/15</td>
                       <td style="text-align:center;vertical-align:middle;">期中考為2018/4/20(星期五上課時間，地點注意系辦公告)可帶一張雙面A4大小的大抄喔～</td>
+                    </tr>
+		      <tr>    
+                      <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
+                      <td class="bulletin-date">2018/4/15</td>
+                      <td style="text-align:center;vertical-align:middle;">歷屆考題已更新至2017年，請同學下載練習=)</td>
                     </tr>
 
                   <tr>    
