--- a/index.html
+++ b/index.html
@@ -547,6 +547,13 @@
                       <td style="vertical-align:middle;"></td>
                       <td style="vertical-align:middle;">2018/04/10</td>
                 </tr>
+		    <tr>
+                    <td style="vertical-align:middle;">Quiz_6</td>
+                      <td style="vertical-align:middle;"><a href="https://goo.gl/4qZqX7" target="_blank">Quiz_6</a></td>
+                      <td style="vertical-align:middle;"><a href="https://goo.gl/q8d3NC" target="_blank">Quiz6_solution(WAIT FOR UPDATING)</a></td>
+                      <td style="vertical-align:middle;"></td>
+                      <td style="vertical-align:middle;">2018/04/10</td>
+                </tr>
 
 
 
