--- a/index.html
+++ b/index.html
@@ -232,12 +232,12 @@
 		      <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
                       <td class="bulletin-date">2018/4/15</td>
-                      <td style="text-align:center;vertical-align:middle;">期中考為2018/4/20(星期五上課時間，地點注意系辦公告)可帶一張雙面A4大小的大抄喔～</td>
+                      <td style="text-align:center;vertical-align:middle;">期中考為2018/4/20可攜帶一張「手寫」 A4 紙張</td>
                     </tr>
 		      <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
                       <td class="bulletin-date">2018/4/15</td>
-                      <td style="text-align:center;vertical-align:middle;">歷屆考題已更新至2017年，請同學下載練習=)</td>
+                      <td style="text-align:center;vertical-align:middle;">歷屆考題已更新至2017年`，小考考題更新至QUIZ6，請同學下載練習=)</td>
                     </tr>
 
                   <tr>    
