--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
                       <td class="bulletin-date">2018/5/11</td>
-                      <td style="text-align:center;vertical-align:middle;">成績已更新，請點選重新整理</td>
+                      <td style="text-align:center;vertical-align:middle;">成績已更新，請點選重新載入</td>
                   </tr>
 
 		              <tr>    
