--- a/index.html
+++ b/index.html
@@ -233,11 +233,10 @@
                   <tr>    
                       <td style="text-align:left;vertical-align:middle"><span class="label label-danger"></span></td>
                       <td class="bulletin-date">2018/06/20</td>
-                      <td style="text-align:center;vertical-align:middle;"> 期末考時間:   2018/06/22   09:20~12:05  
-                          <br>範圍: 第 22 章 depth-first search ~ 第 33 章 Computational Geometry </br>
+                      <td style="text-align:center;vertical-align:middle;"> 期末考時間:   2018/06/22   09:20~12:05 </br> 
+                          <br>範圍: 第 22 章 depth-first search ~ 第 33 章 Computational Geometry 
                           <br> + Network Flow + NP and Computational Intractability。</br> 
-                          <br></br>
-                          <br> 可攜帶一張「手寫」 A4 紙張</br>
+                          <br> 可攜帶一張「手寫」 A4 紙張
                         </td>
                     
 
